feat: redesign UI with WhatsApp-style 3-column layout and real-time WebSocket connection requests and presence